make README.md file

--- a/lgbm_ver_23.ipynb
+++ b/lgbm_ver_23.ipynb
@@ -39,13 +39,13 @@
     }
    ],
    "source": [
-    "!pip install lightgbm\n",
+    "#!pip install lightgbm\n",
     "#!brew install lightgbm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-01-23T13:32:52.626685Z",
@@ -73,6 +73,41 @@
     "import warnings\n",
     "import math\n",
     "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "        Day  Hour  Minute  DHI  DNI   WS     RH   T  TARGET\n",
+       "0         0     0       0    0    0  1.5  69.08 -12     0.0\n",
+       "1         0     0      30    0    0  1.5  69.06 -12     0.0\n",
+       "2         0     1       0    0    0  1.6  71.78 -12     0.0\n",
+       "3         0     1      30    0    0  1.6  71.75 -12     0.0\n",
+       "4         0     2       0    0    0  1.6  75.20 -12     0.0\n",
+       "...     ...   ...     ...  ...  ...  ...    ...  ..     ...\n",
+       "52555  1094    21      30    0    0  2.4  70.70  -4     0.0\n",
+       "52556  1094    22       0    0    0  2.4  66.79  -4     0.0\n",
+       "52557  1094    22      30    0    0  2.2  66.78  -4     0.0\n",
+       "52558  1094    23       0    0    0  2.1  67.72  -4     0.0\n",
+       "52559  1094    23      30    0    0  2.1  67.70  -4     0.0\n",
+       "\n",
+       "[52560 rows x 9 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Day</th>\n      <th>Hour</th>\n      <th>Minute</th>\n      <th>DHI</th>\n      <th>DNI</th>\n      <th>WS</th>\n      <th>RH</th>\n      <th>T</th>\n      <th>TARGET</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1.5</td>\n      <td>69.08</td>\n      <td>-12</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>0</td>\n      <td>30</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1.5</td>\n      <td>69.06</td>\n      <td>-12</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1.6</td>\n      <td>71.78</td>\n      <td>-12</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>1</td>\n      <td>30</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1.6</td>\n      <td>71.75</td>\n      <td>-12</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>2</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1.6</td>\n      <td>75.20</td>\n      <td>-12</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>52555</th>\n      <td>1094</td>\n      <td>21</td>\n      <td>30</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2.4</td>\n      <td>70.70</td>\n      <td>-4</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>52556</th>\n      <td>1094</td>\n      <td>22</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2.4</td>\n      <td>66.79</td>\n      <td>-4</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>52557</th>\n      <td>1094</td>\n      <td>22</td>\n      <td>30</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2.2</td>\n      <td>66.78</td>\n      <td>-4</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>52558</th>\n      <td>1094</td>\n      <td>23</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2.1</td>\n      <td>67.72</td>\n      <td>-4</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>52559</th>\n      <td>1094</td>\n      <td>23</td>\n      <td>30</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2.1</td>\n      <td>67.70</td>\n      <td>-4</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>52560 rows × 9 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "train = pd.read_csv('./data/train/train.csv')\n",
+    "train"
    ]
   },
   {
@@ -2095,13 +2130,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.5.3 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "b2ecc127125b00f058fdb4db54103688c722893d98cac6055456d9c40bb1a09b"
-    }
-   }
+   "name": "python3810jvsc74a57bd0d3ec34e122e3119dd04768a7380cf69b29e63eb2dbd3024d843377634d064d07",
+   "display_name": "Python 3.8.10 64-bit ('PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0')"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2113,7 +2143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3-final"
+   "version": "3.8.10"
   },
   "papermill": {
    "duration": 169.405144,
@@ -2125,6 +2155,11 @@
    "parameters": {},
    "start_time": "2021-01-23T13:32:47.075247",
    "version": "2.1.0"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "d3ec34e122e3119dd04768a7380cf69b29e63eb2dbd3024d843377634d064d07"
+   }
   }
  },
  "nbformat": 4,
